Keep event media visible across short follow-ups